# hadoop-spark-samples

./: README.md
advanced/: Dockerfile  README.md  environment.yml  histogram.py  staged.Dockerfile  submit_job.sh
advanced/utilities/: functions.py
conda/: README.md  submit_hdfs.sh  submit_runtime.sh
docker/: Dockerfile  README.md  submit_docker.sh
package/: Dockerfile  Jenkinsfile  README.md  histogram.py  pyproject.toml  staged.Dockerfile  submit_job.sh
package/histogram_sample_package/: functions.py  histogram.py
package/scripts/: source_new_cluster  source_spark4.sh  submit_job.sh
scripts/: product_job.py  product_job_batch.py  source_new_cluster  source_spark4.sh
