[build-system]
requires = ["setuptools>=58.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histogram_sample_package"
version = "2025.09.01"
authors = [{name = "Willem Schoors", email = "willem.schoors@vito.be"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
        'pystac-client==0.9',
        'rasterio==1.4',
        'numpy==2.3',
        'pyspark==3.5.0'
    ]

[tool.setuptools.packages.find]
include = ["histogram_sample_package*"]

[project.scripts]
histcalc = "histogram_sample_package.histogram:main"
