[build-system]
requires = ["setuptools>=58.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histogram_sample_package"
version = "2025.09.01"
authors = [{name = "Willem Schoors", email = "willem.schoors@vito.be"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
        'pystac-client==0.9',
        'rasterio==1.4',
        'numpy==2.3',
        # PySpark version: use 3.5.0 for Spark 3.5.0 or 4.0.1 for Spark 4.0.1
        # Both versions are supported by the samples repository
        'pyspark>=3.5.0,<5.0.0'  # Supports both Spark 3.5.0 and Spark 4.0.1
    ]

[tool.setuptools.packages.find]
include = ["histogram_sample_package*"]

[project.scripts]
histcalc = "histogram_sample_package.histogram:main"
